postgres/grammar.js
    source_file: $ => seq(
      repeat(seq(optional($.toplevel_stmt), ';')),
      optional($.toplevel_stmt)
    ),

    toplevel_stmt: $ => choice(
        $.stmt,
        $.TransactionStmtLegacy
      ),
    stmt: $ => choice(
        $.AlterEventTrigStmt,
        $.AlterCollationStmt,
        $.AlterDatabaseStmt,
        $.AlterDatabaseSetStmt,
        $.AlterDefaultPrivilegesStmt,
        $.AlterDomainStmt,
        $.AlterEnumStmt,
        $.AlterExtensionStmt,
        $.AlterExtensionContentsStmt,
        $.AlterFdwStmt,
        $.AlterForeignServerStmt,
        $.AlterFunctionStmt,
        $.AlterGroupStmt,
        $.AlterObjectDependsStmt,
        $.AlterObjectSchemaStmt,
        $.AlterOwnerStmt,
        $.AlterOperatorStmt,
        $.AlterTypeStmt,
        $.AlterPolicyStmt,
        $.AlterSeqStmt,
        $.AlterSystemStmt,
        $.AlterTableStmt,
        $.AlterTblSpcStmt,
        $.AlterCompositeTypeStmt,
        $.AlterPublicationStmt,
        $.AlterRoleSetStmt,
        $.AlterRoleStmt,
        $.AlterSubscriptionStmt,
        $.AlterStatsStmt,
        $.AlterTSConfigurationStmt,
        $.AlterTSDictionaryStmt,
        $.AlterUserMappingStmt,
        $.AnalyzeStmt,
        $.CallStmt,
        $.CheckPointStmt,
        $.ClosePortalStmt,
        $.CommentStmt,
        $.ConstraintsSetStmt,
        $.CopyStmt,
        $.CreateAmStmt,
        $.CreateAsStmt,
        $.CreateAssertionStmt,
        $.CreateCastStmt,
        $.CreateConversionStmt,
        $.CreateDomainStmt,
        $.CreateExtensionStmt,
        $.CreateFdwStmt,
        $.CreateForeignServerStmt,
        $.CreateForeignTableStmt,
        $.CreateFunctionStmt,
        $.CreateGroupStmt,
        $.CreateMatViewStmt,
        $.CreateOpClassStmt,
        $.CreateOpFamilyStmt,
        $.CreatePublicationStmt,
        $.AlterOpFamilyStmt,
        $.CreatePolicyStmt,
        $.CreatePLangStmt,
        $.CreateSchemaStmt,
        $.CreateSeqStmt,
        $.CreateStmt,
        $.CreateSubscriptionStmt,
        $.CreateStatsStmt,
        $.CreateTableSpaceStmt,
        $.CreateTransformStmt,
        $.CreateTrigStmt,
        $.CreateEventTrigStmt,
        $.CreateRoleStmt,
        $.CreateUserStmt,
        $.CreateUserMappingStmt,
        $.CreatedbStmt,
        $.DeallocateStmt,
        $.DeclareCursorStmt,
        $.DefineStmt,
        $.DeleteStmt,
        $.DiscardStmt,
        $.DoStmt,
        $.DropCastStmt,
        $.DropOpClassStmt,
        $.DropOpFamilyStmt,
        $.DropOwnedStmt,
        $.DropStmt,
        $.DropSubscriptionStmt,
        $.DropTableSpaceStmt,
        $.DropTransformStmt,
        $.DropRoleStmt,
        $.DropUserMappingStmt,
        $.DropdbStmt,
        $.ExecuteStmt,
        $.ExplainStmt,
        $.FetchStmt,
        $.GrantStmt,
        $.GrantRoleStmt,
        $.ImportForeignSchemaStmt,
        $.IndexStmt,
        $.InsertStmt,
        $.ListenStmt,
        $.RefreshMatViewStmt,
        $.LoadStmt,
        $.LockStmt,
        $.MergeStmt,
        $.NotifyStmt,
        $.PrepareStmt,
        $.ReassignOwnedStmt,
        $.ReindexStmt,
        $.RemoveAggrStmt,
        $.RemoveFuncStmt,
        $.RemoveOperStmt,
        $.RenameStmt,
        $.RepackStmt,
        $.RevokeStmt,
        $.RevokeRoleStmt,
        $.RuleStmt,
        $.SecLabelStmt,
        $.SelectStmt,
        $.TransactionStmt,
        $.TruncateStmt,
        $.UnlistenStmt,
        $.UpdateStmt,
        $.VacuumStmt,
        $.VariableResetStmt,
        $.VariableSetStmt,
        $.VariableShowStmt,
        $.ViewStmt,
        $.WaitStmt
      ),
    select_no_parens: $ => choice(
        $.simple_select,
        seq($.select_clause, $.sort_clause),
        seq($.select_clause, optional($.opt_sort_clause), $.for_locking_clause, optional($.opt_select_limit)),
        seq($.select_clause, optional($.opt_sort_clause), $.select_limit, optional($.opt_for_locking_clause)),
        seq($.with_clause, $.select_clause),
        seq($.with_clause, $.select_clause, $.sort_clause),
        seq($.with_clause, $.select_clause, optional($.opt_sort_clause), $.for_locking_clause, optional($.opt_select_limit)),
        seq($.with_clause, $.select_clause, optional($.opt_sort_clause), $.select_limit, optional($.opt_for_locking_clause))
      ),
    select_clause: $ => choice(
        $.simple_select,
        $.select_with_parens
      ),
    simple_select: $ => choice(
        seq($.kw_select, optional($.opt_all_clause), optional($.opt_target_list), optional($.into_clause), optional($.from_clause), optional($.where_clause), optional($.group_clause), optional($.having_clause), optional($.window_clause)),
        seq($.kw_select, $.distinct_clause, $.target_list, optional($.into_clause), optional($.from_clause), optional($.where_clause), optional($.group_clause), optional($.having_clause), optional($.window_clause)),
        $.values_clause,
        seq($.kw_table, $.relation_expr),
        prec.left(1, prec.dynamic(1, seq($.select_clause, $.kw_union, optional($.set_quantifier), $.select_clause))),
        prec.left(2, prec.dynamic(2, seq($.select_clause, $.kw_intersect, optional($.set_quantifier), $.select_clause))),
        prec.left(1, prec.dynamic(1, seq($.select_clause, $.kw_except, optional($.set_quantifier), $.select_clause)))
      ),
    opt_all_clause: $ => $.kw_all,
    values_clause: $ => choice(
        prec.left(20, prec.dynamic(20, seq($.kw_values, '(', $.expr_list, ')'))),
        prec.left(20, prec.dynamic(20, seq($.values_clause, ',', '(', $.expr_list, ')')))
      ),
    from_clause: $ => seq($.kw_from, $.from_list),
    from_list: $ => choice(
        $.table_ref,
        seq($.from_list, ',', $.table_ref)
      ),
    table_ref: $ => choice(
        seq($.relation_expr, optional($.opt_alias_clause)),
        seq($.relation_expr, optional($.opt_alias_clause), $.tablesample_clause),
        seq($.func_table, optional($.func_alias_clause)),
        seq($.kw_lateral, $.func_table, optional($.func_alias_clause)),
        seq($.xmltable, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.xmltable, optional($.opt_alias_clause)),
        seq($.select_with_parens, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.select_with_parens, optional($.opt_alias_clause)),
        $.joined_table,
        prec.left(20, prec.dynamic(20, seq('(', $.joined_table, ')', $.alias_clause))),
        seq($.json_table, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.json_table, optional($.opt_alias_clause))
      ),
    relation_expr: $ => choice(
        $.qualified_name,
        $.extended_relation_expr
      ),
    where_clause: $ => seq($.kw_where, $.a_expr),
    a_expr_prec: $ => choice(
        $.c_expr,
        prec.left(21, prec.dynamic(21, seq($.a_expr_prec, '::', $.Typename))),
        prec.left(17, prec.dynamic(17, seq($.a_expr_prec, $.kw_collate, $.any_name))),
        prec.right(18, prec.dynamic(18, seq('+', $.a_expr_prec))),
        prec.right(18, prec.dynamic(18, seq('-', $.a_expr_prec))),
        prec.left(13, prec.dynamic(13, seq($.a_expr_prec, '+', $.a_expr_prec))),
        prec.left(13, prec.dynamic(13, seq($.a_expr_prec, '-', $.a_expr_prec))),
        prec.left(14, prec.dynamic(14, seq($.a_expr_prec, '*', $.a_expr_prec))),
        prec.left(14, prec.dynamic(14, seq($.a_expr_prec, '/', $.a_expr_prec))),
        prec.left(14, prec.dynamic(14, seq($.a_expr_prec, '%', $.a_expr_prec))),
        prec.left(15, prec.dynamic(15, seq($.a_expr_prec, '^', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '<', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '>', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '=', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '<=', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '>=', $.a_expr_prec))),
        prec.left(7, prec.dynamic(7, seq($.a_expr_prec, '<>', $.a_expr_prec)))
      ),
    a_expr: $ => choice(
        alias($.a_expr_prec, $.a_expr),
        prec.left(16, prec.dynamic(16, seq($.a_expr, $.kw_at, $.kw_time, $.kw_zone, $.a_expr))),
        prec.left(16, prec.dynamic(16, seq($.a_expr, $.kw_at, $.kw_local))),
        prec.left(12, prec.dynamic(12, seq($.a_expr, $.qual_Op, $.a_expr))),
        prec.left(12, prec.dynamic(12, seq($.qual_Op, $.a_expr))),
        prec.left(4, prec.dynamic(4, seq($.a_expr, $.kw_and, $.a_expr))),
        prec.left(3, prec.dynamic(3, seq($.a_expr, $.kw_or, $.a_expr))),
        prec.right(5, prec.dynamic(5, seq($.kw_not, $.a_expr))),
        prec.right(5, prec.dynamic(5, seq($.kw_not, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_like, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_like, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_like, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_like, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_ilike, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_ilike, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_ilike, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_ilike, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_similar, $.kw_to, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_similar, $.kw_to, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_similar, $.kw_to, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_similar, $.kw_to, $.a_expr, $.kw_escape, $.a_expr))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_null))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_isnull))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_null))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_notnull))),
        seq($.row, $.kw_overlaps, $.row),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_true))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_true))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_false))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_false))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_unknown))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_unknown))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_distinct, $.kw_from, $.a_expr))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_distinct, $.kw_from, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_between, optional($.opt_asymmetric), $.b_expr, $.kw_and, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_between, optional($.opt_asymmetric), $.b_expr, $.kw_and, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_between, $.kw_symmetric, $.b_expr, $.kw_and, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_between, $.kw_symmetric, $.b_expr, $.kw_and, $.a_expr))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_in, $.select_with_parens))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_in, '(', $.expr_list, ')'))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_in, $.select_with_parens))),
        prec.left(8, prec.dynamic(8, seq($.a_expr, $.kw_not, $.kw_in, '(', $.expr_list, ')'))),
        prec.left(12, prec.dynamic(12, seq($.a_expr, $.subquery_Op, $.sub_type, $.select_with_parens))),
        prec.left(12, prec.dynamic(12, seq($.a_expr, $.subquery_Op, $.sub_type, '(', $.a_expr, ')'))),
        seq($.kw_unique, optional($.opt_unique_null_treatment), $.select_with_parens),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_document))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_document))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_normalized))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.unicode_normal_form, $.kw_normalized))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.kw_normalized))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.unicode_normal_form, $.kw_normalized))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.json_predicate_type_constraint, optional($.json_key_uniqueness_constraint_opt)))),
        prec.left(6, prec.dynamic(6, seq($.a_expr, $.kw_is, $.kw_not, $.json_predicate_type_constraint, optional($.json_key_uniqueness_constraint_opt)))),
        $.kw_default
      ),
    c_expr: $ => choice(
        $.columnref,
        $.AexprConst,
        seq($.param, optional($.opt_indirection)),
        prec.left(20, prec.dynamic(20, seq('(', $.a_expr, ')', optional($.opt_indirection)))),
        $.case_expr,
        $.func_expr,
        prec.right(18, prec.dynamic(18, $.select_with_parens)),
        seq($.select_with_parens, $.indirection),
        seq($.kw_exists, $.select_with_parens),
        seq($.kw_array, $.select_with_parens),
        seq($.kw_array, $.array_expr),
        $.explicit_row,
        $.implicit_row,
        prec.left(20, prec.dynamic(20, seq($.kw_grouping, '(', $.expr_list, ')')))
      ),
    expr_list: $ => choice(
        $.a_expr,
        seq($.expr_list, ',', $.a_expr)
      ),
    columnref: $ => choice(
        $.ColId,
        seq($.ColId, $.indirection)
      ),
    opt_target_list: $ => $.target_list,
    target_list: $ => choice(
        $.target_el,
        seq($.target_list, ',', $.target_el)
      ),
    target_el: $ => choice(
        seq($.a_expr, $.kw_as, $.ColLabel),
        seq($.a_expr, $.BareColLabel),
        $.a_expr,
        prec.left(14, prec.dynamic(14, '*'))
      ),
    qualified_name: $ => choice(
        $.ColId,
        seq($.ColId, $.indirection)
      ),
    kw_all: _ => token(prec(1, /[aA][lL][lL]/)),
    kw_from: _ => token(prec(1, /[fF][rR][oO][mM]/)),
    kw_select: _ => token(prec(1, /[sS][eE][lL][eE][cC][tT]/)),
    kw_table: _ => token(prec(1, /[tT][aA][bB][lL][eE]/)),
    kw_union: _ => token(prec(1, /[uU][nN][iI][oO][nN]/)),
    kw_values: _ => token(prec(1, /[vV][aA][lL][uU][eE][sS]/)),
    kw_where: _ => token(prec(1, /[wW][hH][eE][rR][eE]/)),
    identifier: _ => token(prec(0, /[a-zA-Z_\u0080-\u00ff][a-zA-Z0-9_$\u0080-\u00ff]*/)),

    // Double-quoted delimited identifier: "my table" or "My""Column"
    // NOTE: U&"..." unicode identifiers have the same lexer limitation as
    // prefix strings — the U is consumed as an identifier. An external
    // scanner would be needed to handle these correctly.
    integer_literal: _ => token(/[0-9](_?[0-9])*/),
